packages/taquito-michel-codec/test/contracts_013/ill_typed/stack_bottom_undug2able.tz
parameter unit;
storage unit;
code {
       DUG 2;
     }
